Fix alignment of controls to match gMusic

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -52,6 +52,7 @@ body {
   left: 0px;
   background-color: #fafafa;
   width: 450px;
+  height: 56px;
   outline: none;
   z-index: 1;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
@@ -92,6 +93,7 @@ body {
   outline: none;
   border: none;
   opacity: 0.8;
+  margin-top: 3px;
   transition: background-color 0.218s;
   background: no-repeat url(../img/sprites.png);
   background-size: 3079px 727px;
@@ -203,7 +205,7 @@ body {
   text-align: right;
   margin-right: 60px;
   position: relative;
-  top: 5px;
+  top: 8px;
 }
 
 #played-slider {
@@ -216,7 +218,7 @@ body {
   outline: none;
   height: 3px;
   padding: 5px 0;
-  margin-top: 22px;
+  margin-top: 25px;
 }
 
 #slider-background {
@@ -238,6 +240,6 @@ body {
   position:absolute;
   right: 0px;
   left: 0px;
-  bottom: 78px;
+  bottom: 81px;
   z-index: 1000;
 }
